--- a/style.css
+++ b/style.css
@@ -429,7 +429,7 @@ a.button:hover {
 
 .main-menu.sm-clean a:hover
 {
-    color: #fff !important;
+    color: #48bce6 !important;
 }
 
 .sm-clean li.active a
